# memoized-lambda

./: .gitignore  README.md  noxfile.py  pyproject.toml  setup.cfg
src/memoized_lambda/: __init__.py
tests/: test_memoized_lambda.py
