[build-system]
requires = ["setuptools", "setuptools_scm", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.black]
safe = true
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
show_error_codes = true
strict = true

[tool.pylint.master]
disable = [
    "missing-docstring",
    "too-few-public-methods",
]
max-args = 7
max-line-length = 120

[tool.pytest.ini_options]
addopts = "--asyncio-mode=strict"
