[build-system]
requires = ["setuptools", "setuptools_scm", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.mypy]
show_error_codes = true
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
src = ["src"]
target-version = "py39"
lint.select = [
  "F",
  "E",
  "I",
  "UP",
  "PLE",
  "PLW",
  "RUF",
]
