[metadata]
name = memoized-lambda
url = https://github.com/exg/memoized-lambda
author = Emanuele Giaquinta
author_email = emanuele.giaquinta@gmail.com
classifiers=
  License :: OSI Approved :: Apache Software License
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
long_description = file: README.md
long_description_content_type = text/markdown

[options]
include-package-data = True
packages = find:
package_dir =
    =src
python_requires = >=3.9
install_requires =
  botocore

[options.extras_require]
dev =
  black
  isort
  mypy
  pylint
  boto3-stubs[lambda]

test =
  pytest
  pytest-asyncio
  pytest-cov

[options.package_data]
* = py.typed

[options.packages.find]
where = src
